# tidy-pydy-tuesday

./: .gitignore  .python-version  2025_01_21_himalayan_expeditions.ipynb  README.md  main.py  pyproject.toml
.history/: main_20251104233116.py  main_20251104234905.py
2024-05-14_coffee_taste_test/: 2024-05-14_coffee_taste_test.ipynb  README.md  coffee_survey_cleaned.csv  main.py  pyproject.toml
2025_01_21_himalayan_expeditions/: 2025_01_21_himalayan_expeditions.ipynb  README.md  app.py  pyproject.toml
