[project]
name = "2024-05-14-coffee-taste-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyjanitor>=0.32.1",
    "seaborn>=0.13.2",
]
