[project]
name = "tidy-pydy-tuesday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbfread>=2.0.7",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyreadstat>=1.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "simpledbf>=0.2.6",
]
